css/style.css
body {
    margin: 0;
    font-family: 'Oswald', sans-serif;
}

/* HEADER */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: orange;
    align-items: center;
    width: 100%;
    height: 100px;
}

.logo-container {
    display: flex;
    align-items: center;
    margin-left: 40px;
}

.navbar {
    display: flex;
    align-items: center;
    height: 100%;
    margin-right: 40px;
}

.navbar li {
    margin: 0 15px;
    font-size: 20px;
    list-style: none;
    padding: 0;
}

.navbar a {
    text-decoration: none;
    color: black;
}
.navbar a:hover {
    color: white;
}
/* HEADER ENDS */

.hero-img-container {
    position: relative;
    padding-top: 3px;
    object-position: top;
    height : 500px;
    overflow: hidden;
}

.hero-img-container img {
    width: 100%;
    height: auto;
}
.hero-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
    font-size: 40px;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
    background-color: white;
    padding: 15px;
    border-radius: 5px;
}
/* HERO IMAGE ENDS */
/* EVERYDAY CATEGORIES */

.everyday-categories-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    background-color: white;
    padding: 20px 0;
    margin: 10px 0;
}
.everday-categories-inner {
    max-width: 1200px;
    align-items: center;
    width: 100%;
    margin: 0 auto;
}

.everyday-categories-container h2 {
    font-size: 45px;
    margin: 50px 55px 0 55px;
}

.everyday-categories-container p {
    font-size: 20px;
    color: rgb(0, 0, 0);
    margin: 50px;
}

.labels-images {
    display: flex;
    justify-content: center;
    gap: 20px;
    flex-wrap: wrap;
}

.labels-images img {
    flex: 1;
    width: 350px;
    height:350px;
    object-fit: cover;
    border-radius: 5px;
} 
.labels-images span{
    font-size: 25px;
    display: flex;
    justify-content: flex-start;
    background-color: white;
    padding: 10px 0;
    margin-bottom: 20px;
}
/* EVERYDAY CATEGORIES ENDS */
/* HEALTHY RECIPES OF THE WEEK */

.hlthy-r-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    background-color: rgb(139, 161, 178);
    padding: 20px 0;
}
.hlthy-r-inner{
    display: flex;
    align-items: center;
    width: 100%;
    margin: 0 auto;
}

.hlthy-r-title {
    font-size: 45px;
    margin: 50px 55px 0 55px;
}

.hlthy-r-description {
    font-size: 20px;
    color: rgb(0, 0, 0);
    margin: 50px;
}

.hlthy-r-images{
    justify-content: center;
    width: 100%;
    gap: 20px;
    margin: 10px 0;
}

.hlthy-r-images img {
    display: flex;
    width: 300px;
    object-fit: cover;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}

.hlthy-r-images span {
    display: flex;
    justify-content: center;
    font-size: 15px;
    background-color: rgb(255, 253, 253);
    padding: 10px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-bottom: 20px;
}
/* HEALTHY RECIPES OF THE WEEK ENDS */
/*WHERE TO EAT SECTION*/

